# mailbox

./: CMakeLists.txt  README.md  example_mailbox.cpp  mailbox.cpp  mailbox.drawio  mailbox.hpp  mailbox.tpp  mailbox_map.hpp  mailbox_map_types.hpp  mailbox_types.hpp  template_mailbox_map.hpp
test/: mailbox_test.cpp  mailbox_test.hpp
